# fraud-detection-mlops

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docker/: Dockerfile
notebooks/: 01_eda.ipynb
src/: __init__.py  config.py
src/api/: main.py  model_loader.py  schemas.py
src/data/: download.py  make_parquet.py
src/features/: build_features.py
src/models/: factory.py
src/monitoring/: drift_report.py
src/training/: evaluate.py  train.py
tests/: test_api.py  test_features.py
