[project]
name = "fraud-detection-mlops"
version = "0.1.0"
description = "End-to-end MLOps pipeline for credit card fraud detection."
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # Depends() in default args is the canonical FastAPI pattern
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
